--- a/src/app/css/banner.css
+++ b/src/app/css/banner.css
@@ -1,6 +1,10 @@
 #banner {
     height: 40vh;
     color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 4em;
 }
 
 #banner h1::before {
