--- a/src/app/css/page.css
+++ b/src/app/css/page.css
@@ -17,16 +17,13 @@
 }
 
 .child-container {
-    border: none;
-    border-radius: 5px;
+    border: 50px solid transparent;
     background: var(--child-bg-color);
+    border-radius: 5px;
     height: 40vh;
-}
-
-.banner {
-    background: none;
-    color: white;
-    height: 40vh;
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
 }
 
 .intro {
@@ -35,6 +32,7 @@
 
 .interactive-graph {
     height: 70vh;
+    background: none;
 }
 
 .contact-me {
