added email submission functionality.

--- a/src/app/css/banner.css
+++ b/src/app/css/banner.css
@@ -13,12 +13,14 @@
 }
 
 @media (max-width: 540px) {
-    height: 40vh;
-    color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 2em;
+    #banner {
+        height: 40vh;
+        color: white;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 3em;
+    }
 }
 
 @keyframes cursor-blink {
