--- a/src/app/css/projects.css
+++ b/src/app/css/projects.css
@@ -1,9 +1,10 @@
 #project_wrapper {
-    height: 600px;
+    min-height: 600px;
+    height: wrap-content;
     width: 100%;
 
     display: flex;
-    flex-flow: column wrap;
+    flex-flow: row wrap;
     justify-content: center;
     align-items: center;
     margin-right: auto;
