--- a/src/app/css/react_styles.css
+++ b/src/app/css/react_styles.css
@@ -4,6 +4,14 @@
     fill: none;
 }
 
+@media (prefers-color-scheme: dark) {
+    .react-flow__edge-path, .react-flow__connection-path {
+        stroke: white;
+        stroke-width: 1;
+        fill: none;
+    }
+}
+
 .react-flow__node.jobitem {
   border-radius: 10%;
   width: 200px;
