--- a/src/app/css/contact_me.css
+++ b/src/app/css/contact_me.css
@@ -44,14 +44,14 @@ input {
     margin-top: 10px;
     font-weight: bold;
     font-size: 1.5em;
-
+    color: black;
 }
 
 @media (max-width: 850px) {
 
     #contact_me {
         width: 100%;
-        height: 900px;
+        height: 1100px;
         background: var(--child-bg-color);
         display: flex;
         flex-flow: column nowrap;
