--- a/src/app/Components/css/contact_me.css
+++ b/src/app/Components/css/contact_me.css
@@ -2,6 +2,7 @@
     width: 100%;
     height: 600px;
     background: var(--child-bg-color);
+    border-radius: 5px;
     display: flex;
     flex-flow: row nowrap;
 }
@@ -26,14 +27,24 @@
     box-sizing: border-box;
 }
 
-input {
-    width: 80%;
+fieldset {
+    width: 65%;
 }
 
-#message {
-    height: 150px;
-    overflow: auto;
+input, textarea {
+    width: 100%;
+    height: 40px;
+    border-radius: 5px;
+    color: black;
+    padding: 10px;
 }
+
+textarea#message {
+    height: 150px;
+    overflow-wrap: break-word;
+}
+
+
 
 #send_button {
     border-radius: 5%;
